; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mpic.c_mpic_unmask_irq_err.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mpic.c_mpic_unmask_irq_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mv_mpic_sc = common dso_local global i32 0, align 4
@MPIC_ISE = common dso_local global i32 0, align 4
@MPIC_INT_ERR = common dso_local global i32 0, align 4
@MPIC_ICM = common dso_local global i32 0, align 4
@ERR_IRQ = common dso_local global i32 0, align 4
@MPIC_ERR_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @mpic_unmask_irq_err to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpic_unmask_irq_err(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* @mv_mpic_sc, align 4
  %6 = load i32, i32* @MPIC_ISE, align 4
  %7 = load i32, i32* @MPIC_INT_ERR, align 4
  %8 = call i32 @MPIC_WRITE(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* @mv_mpic_sc, align 4
  %10 = load i32, i32* @MPIC_ICM, align 4
  %11 = load i32, i32* @MPIC_INT_ERR, align 4
  %12 = call i32 @MPIC_CPU_WRITE(i32 %9, i32 %10, i32 %11)
  %13 = load i64, i64* %2, align 8
  %14 = load i32, i32* @ERR_IRQ, align 4
  %15 = sext i32 %14 to i64
  %16 = sub i64 %13, %15
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* @mv_mpic_sc, align 4
  %19 = load i32, i32* @MPIC_ERR_MASK, align 4
  %20 = call i32 @MPIC_CPU_READ(i32 %18, i32 %19)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = shl i32 1, %21
  %23 = load i32, i32* %3, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* @mv_mpic_sc, align 4
  %26 = load i32, i32* @MPIC_ERR_MASK, align 4
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @MPIC_CPU_WRITE(i32 %25, i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @MPIC_WRITE(i32, i32, i32) #1

declare dso_local i32 @MPIC_CPU_WRITE(i32, i32, i32) #1

declare dso_local i32 @MPIC_CPU_READ(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
